8232811: Dialog's preferred size no longer accommodates multi-line strings

Reviewed-by: kcr, arapte